Update command data for MINI/Cooper

--- a/tests/test_cases/2020/commands/6F1.607.22DDBC|e=07,fc=1.yaml
+++ b/tests/test_cases/2020/commands/6F1.607.22DDBC|e=07,fc=1.yaml
@@ -173,6 +173,13 @@ test_cases:
     607F1100962DDBC0100
     607F12103AD0073FFFF
 - expected_values:
+    MINI_HVBAT_SOC: 29.9
+    MINI_HVBAT_SOC_MAX: 94.7
+    MINI_HVBAT_SOC_MIN: 12
+  response: |-
+    607F1100962DDBC012B
+    607F12103B30078FFFF
+- expected_values:
     MINI_HVBAT_SOC: 66.2
     MINI_HVBAT_SOC_MAX: 94.3
     MINI_HVBAT_SOC_MIN: 11.5
