--- a/tests/test_cases/2020/commands/6F1.61A.22DE00|e=1A,fc=1.yaml
+++ b/tests/test_cases/2020/commands/6F1.61A.22DE00|e=1A,fc=1.yaml
@@ -183,6 +183,18 @@ test_cases:
 - expected_values:
     MINI_HVBAT_CHG_CON: 0
     MINI_HVBAT_CHG_CON_EXT: 0
+    MINI_HVBAT_CHG_RDY: 0
+    MINI_HVBAT_HVPM_MIN_SOC: 12
+    MINI_HVBAT_HVPM_SOC: 36.5
+  response: |-
+    61AF1101C62DE00016D
+    61AF121180000000100
+    61AF1225C0A2A07D005
+    61AF123C8010E00060D
+    61AF12486008805CAFF
+- expected_values:
+    MINI_HVBAT_CHG_CON: 0
+    MINI_HVBAT_CHG_CON_EXT: 0
     MINI_HVBAT_CHG_RDY: 1
     MINI_HVBAT_HVPM_MIN_SOC: 11.5
     MINI_HVBAT_HVPM_SOC: 36.8
