Update command data for MINI/Cooper

--- a/tests/test_cases/2020/commands/6F1.629.22DBE4|e=29,fc=1.yaml
+++ b/tests/test_cases/2020/commands/6F1.629.22DBE4|e=29,fc=1.yaml
@@ -147,6 +147,20 @@ test_cases:
     629F122100401010101
     629F1230164646464FF
 - expected_values:
+    MINI_FL_SPD: 53.46
+    MINI_FR_SPD: 53.52
+    MINI_RL_SPD: 53.28
+    MINI_RR_SPD: 53.32
+  response: |-
+    629F1101662DBE414C0
+    629F12114BA14B014AC
+    629F12214B401010101
+    629F1230164646464FF
+    629F1101662DBE414E2
+    629F12114E814D014D4
+    629F12214B401010101
+    629F1230164646464FF
+- expected_values:
     MINI_FL_SPD: 89.08
     MINI_FR_SPD: 89.27
     MINI_RL_SPD: 88.89
