Update command data for MINI/Cooper

--- a/tests/test_cases/2020/commands/6F1.660.22D10D|e=60,fc=1.yaml
+++ b/tests/test_cases/2020/commands/6F1.660.22D10D|e=60,fc=1.yaml
@@ -9,6 +9,17 @@ test_cases:
     660F1100B62D10D0000
     660F121ADFF0000ADFF
 - expected_values:
+    MINI_ODO1: 49484
+    MINI_ODO2: 49484
+  response: |-
+    660F10562D1070000
+    660F1100B62D10D0000
+    660F121C14C0000C14C
+    660F10562D1126466
+    660F10562D1070000
+    660F1100B62D10D0000
+    660F121C14C0000C14C
+- expected_values:
     MINI_ODO1: 43606
     MINI_ODO2: 43606
   response: |-
