--- a/tests/test_cases/2021/commands/6F1.660.22D10D|e=60,fc=1.yaml
+++ b/tests/test_cases/2021/commands/6F1.660.22D10D|e=60,fc=1.yaml
@@ -19,8 +19,14 @@ test_cases:
     660F1100B62D10D0000
     660F121A35F0000A35F
 - expected_values:
-    MINI_ODO1: 42884
-    MINI_ODO2: 42884
+    MINI_ODO1: 48874
+    MINI_ODO2: 48874
   response: |-
     660F1100B62D10D0000
-    660F121A7840000A784
+    660F121BEEA0000BEEA
+- expected_values:
+    MINI_ODO1: 48880
+    MINI_ODO2: 48880
+  response: |-
+    660F1100B62D10D0000
+    660F121BEF00000BEF0
