Update command data for MINI/Cooper

--- a/tests/test_cases/2021/commands/6F1.656.22DCDD|e=56,fc=1.yaml
+++ b/tests/test_cases/2021/commands/6F1.656.22DCDD|e=56,fc=1.yaml
@@ -57,6 +57,19 @@ test_cases:
     MINI_DOOR_DRIVER: 0
     MINI_DOOR_DRIVER_REAR: 0
     MINI_DOOR_PASSENGER: 0
+    MINI_DOOR_PASSENGER_REAR: 0
+    MINI_HOOD: 0
+    MINI_REAR_WINDOW: 2
+    MINI_TRUNK: 1
+  response: |-
+    656F1100F62DCDD0000
+    656F121000000010201
+    656F12200000000FFFF
+- expected_values:
+    MINI_CENTRAL_LOCK: 1
+    MINI_DOOR_DRIVER: 0
+    MINI_DOOR_DRIVER_REAR: 0
+    MINI_DOOR_PASSENGER: 0
     MINI_DOOR_PASSENGER_REAR: 1
     MINI_HOOD: 0
     MINI_REAR_WINDOW: 2
@@ -64,4 +77,17 @@ test_cases:
   response: |-
     656F1100F62DCDD0000
     656F121000100000201
+    656F12200000000FFFF
+- expected_values:
+    MINI_CENTRAL_LOCK: 1
+    MINI_DOOR_DRIVER: 0
+    MINI_DOOR_DRIVER_REAR: 0
+    MINI_DOOR_PASSENGER: 1
+    MINI_DOOR_PASSENGER_REAR: 0
+    MINI_HOOD: 0
+    MINI_REAR_WINDOW: 2
+    MINI_TRUNK: 1
+  response: |-
+    656F1100F62DCDD0001
+    656F121000000010201
     656F12200000000FFFF
