--- a/tests/test_cases/2021/commands/6F1.660.22D10D|e=60,fc=1.yaml
+++ b/tests/test_cases/2021/commands/6F1.660.22D10D|e=60,fc=1.yaml
@@ -24,3 +24,9 @@ test_cases:
   response: |-
     660F1100B62D10D0000
     660F121BEF40000BEF4
+- expected_values:
+    MINI_ODO1: 48896
+    MINI_ODO2: 48896
+  response: |-
+    660F1100B62D10D0000
+    660F121BF000000BF00
