Update command data for MINI/Cooper

--- a/tests/test_cases/2021/commands/6F1.629.22DBE4|e=29,fc=1.yaml
+++ b/tests/test_cases/2021/commands/6F1.629.22DBE4|e=29,fc=1.yaml
@@ -61,6 +61,16 @@ test_cases:
     629F12208FC01010101
     629F1230164646464FF
 - expected_values:
+    MINI_FL_SPD: 40.5
+    MINI_FR_SPD: 40.91
+    MINI_RL_SPD: 40.27
+    MINI_RR_SPD: 40.56
+  response: |-
+    629F1101662DBE40FD2
+    629F1210FFB0FBB0FD8
+    629F1220FA001010101
+    629F1230164646464FF
+- expected_values:
     MINI_FL_SPD: 40.56
     MINI_FR_SPD: 40.89
     MINI_RL_SPD: 40.46
