--- a/tests/test_cases/2021/commands/6F1.656.22DCDD|e=56,fc=1.yaml
+++ b/tests/test_cases/2021/commands/6F1.656.22DCDD|e=56,fc=1.yaml
@@ -104,3 +104,16 @@ test_cases:
     656F1100F62DCDD0001
     656F121000000010201
     656F12200000000FFFF
+- expected_values:
+    MINI_CENTRAL_LOCK: 1
+    MINI_DOOR_DRIVER: 1
+    MINI_DOOR_DRIVER_REAR: 0
+    MINI_DOOR_PASSENGER: 1
+    MINI_DOOR_PASSENGER_REAR: 0
+    MINI_HOOD: 0
+    MINI_REAR_WINDOW: 2
+    MINI_TRUNK: 0
+  response: |-
+    656F1100F62DCDD0101
+    656F121000000000201
+    656F12200000000FFFF
