--- a/tests/test_cases/2021/commands/6F1.660.22D111|e=60,fc=1.yaml
+++ b/tests/test_cases/2021/commands/6F1.660.22D111|e=60,fc=1.yaml
@@ -5,6 +5,17 @@ test_cases:
     MINI_RANGE_E_CUR: 0
     MINI_RANGE_E_MAX: 0
     MINI_RANGE_E_USE: 12
+    MINI_RANGE_F_CUR: 200
+  response: |-
+    660F1100F62D1110000
+    660F121000007D0FFFF
+    660F1222EE00000FFFF
+    660F10562D1070185
+- expected_values:
+    MINI_AUX_PWR: 0
+    MINI_RANGE_E_CUR: 0
+    MINI_RANGE_E_MAX: 0
+    MINI_RANGE_E_USE: 12
     MINI_RANGE_F_CUR: 291
   response: |-
     660F1100F62D1110000
