--- a/tests/test_cases/2019/command_support.yaml
+++ b/tests/test_cases/2019/command_support.yaml
@@ -58,3 +58,13 @@ supported_commands_by_ecu:
   - 0121:MIL_DIST
   - 0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
   - 0142:VPWR
+unsupported_commands_by_ecu:
+  "6F1":
+  - 6F1.607.22DD68|e=07,fc=1:MINI_HVBAT_VOLT
+  - 6F1.607.22DD69|e=07,fc=1:MINI_HVBAT_C,MINI_HVBAT_CURR
+  - 6F1.607.22DDBC|e=07,fc=1:MINI_HVBAT_SOC,MINI_HVBAT_SOC_MAX,MINI_HVBAT_SOC_MIN
+  - 6F1.607.22DDC0|e=07,fc=1:MINI_HVBAT_CT_MAX,MINI_HVBAT_CT_MIN
+  - 6F1.607.22DF71|e=07,fc=1:MINI_HVBAT_C_CNT,MINI_HVBAT_C_CNT_MOD,MINI_HVBAT_MOD_CNT,MINI_HVBAT_MOD_T_CNT
+  - 6F1.607.22DFA0|e=07,fc=1:MINI_HVBAT_C_CAP_AVG,MINI_HVBAT_C_CAP_MAX,MINI_HVBAT_C_CAP_MIN,MINI_HVBAT_C_OCV_AVG,MINI_HVBAT_C_OCV_MAX,MINI_HVBAT_C_OCV_MIN,MINI_HVBAT_C_RES_FACTOR_AVG,MINI_HVBAT_C_RES_FACTOR_MAX,MINI_HVBAT_C_RES_FACTOR_MIN,MINI_HVBAT_C_SOC_AVG,MINI_HVBAT_C_SOC_MAX,MINI_HVBAT_C_SOC_MIN,MINI_HVBAT_C_TEMP_AVG,MINI_HVBAT_C_TEMP_MAX,MINI_HVBAT_C_TEMP_MIN,MINI_HVBAT_C_V_AVG,MINI_HVBAT_C_V_MAX,MINI_HVBAT_C_V_MIN,MINI_HVBAT_IMPEDANCE_ALPHA
+  - 6F1.607.22E5C7|e=07,fc=1:MINI_HVBAT_SOH_V2
+  - 6F1.607.22E5CE|e=07,fc=1:MINI_HVBAT_SOC_V2
