--- a/tests/test_cases/2010/command_support.yaml
+++ b/tests/test_cases/2010/command_support.yaml
@@ -71,7 +71,7 @@ unsupported_commands_by_ecu:
   - 6F1.618.22DA12|e=18,fc=1:MINI_ATF_TEMP
   - 6F1.618.22DA1F|e=18,fc=1:MINI_KICKDOWN
   - 6F1.618.22DA22|e=18,fc=1:MINI_TQ_CNVRT_LOCKUP
-  - 6F1.618.22DA23|e=18,fc=1:MINI_ODO_LOWRES
+  - 6F1.618.22DA23|e=18,fc=1:MINI_ODO,MINI_ODO_LOWRES
   - 6F1.618.22DA25|e=18,fc=1:MINI_EOT
   - 6F1.618.22DA2A|e=18,fc=1:MINI_TQ_CNVRT_RPM,MINI_TRANS_SHAFT_RPM
   - 6F1.618.22DA2E|e=18,fc=1:MINI_GEAR,MINI_GEAR_SHIFT
@@ -85,7 +85,7 @@ unsupported_commands_by_ecu:
   - 6F1.660.22D10D|e=60,fc=1:MINI_ODO1,MINI_ODO2
   - 6F1.660.22D111|e=60,fc=1:MINI_AUX_PWR,MINI_RANGE_E_CUR,MINI_RANGE_E_MAX,MINI_RANGE_E_USE,MINI_RANGE_F_CUR,MINI_RANGE_F_MAX
   - 6F1.660.22D112|e=60,fc=1:MINI_AAT
-  - 6F1.663.22D031|e=63,fc=1:MINI_GEAR_V2
+  - 6F1.663.22D031
   "7E0":
   - 7E0.0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 7E0.011C:OBDSUP
