Update command data for MINI/Cooper

--- a/tests/test_cases/2021/commands/6F1.640.221700|e=40,fc=1.yaml
+++ b/tests/test_cases/2021/commands/6F1.640.221700|e=40,fc=1.yaml
@@ -40,3 +40,8 @@ test_cases:
   response: |-
     640F110076217000000
     640F121C107FFFFFFFF
+- expected_values:
+    MINI_ODO_2: 49422
+  response: |-
+    640F110076217000000
+    640F121C10EFFFFFFFF
