Update command data for MINI/Cooper

--- a/tests/test_cases/2013/command_support.yaml
+++ b/tests/test_cases/2013/command_support.yaml
@@ -94,7 +94,7 @@ unsupported_commands_by_ecu:
   - 6F1.660.22D10D|e=60,fc=1:MINI_ODO1,MINI_ODO2
   - 6F1.660.22D111|e=60,fc=1:MINI_AUX_PWR,MINI_RANGE_E_CUR,MINI_RANGE_E_MAX,MINI_RANGE_E_USE,MINI_RANGE_F_CUR,MINI_RANGE_F_MAX
   - 6F1.660.22D112|e=60,fc=1:MINI_AAT
-  - 6F1.663.22D031
+  - 6F1.663.22D031|e=63,fc=1:MINI_GEAR_V2
   "7E0":
   - 7E0.0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 7E0.0103:FUELSYS1,FUELSYS2
