--- a/tests/test_cases/2023/command_support.yaml
+++ b/tests/test_cases/2023/command_support.yaml
@@ -32,4 +32,4 @@ unsupported_commands_by_ecu:
   - 6F1.618.22DA37|e=18,fc=1:MINI_TIME_D,MINI_TIME_M,MINI_TIME_S
   - 6F1.619.22DB32|e=19,fc=1:MINI_AXLE_FRONT_ACTUAL_TORQUE,MINI_AXLE_FRONT_SETPOINT_TORQUE
   - 6F1.660.22420C|e=60,fc=1:MINI_RANGE,MINI_RANGE_COMF,MINI_RANGE_ECO
-  - 6F1.663.22D031
+  - 6F1.663.22D031|e=63,fc=1:MINI_GEAR_V2
