Update command data for MINI/Cooper

--- a/tests/test_cases/2023/commands/6F1.61A.22DE00|e=1A,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.61A.22DE00|e=1A,fc=1.yaml
@@ -15,6 +15,78 @@ test_cases:
 - expected_values:
     MINI_HVBAT_CHG_CON: 0
     MINI_HVBAT_CHG_CON_EXT: 0
+    MINI_HVBAT_CHG_RDY: 0
+    MINI_HVBAT_HVPM_MIN_SOC: 11.5
+    MINI_HVBAT_HVPM_SOC: 69.7
+  response: |-
+    61AF1101C62DE0002B9
+    61AF121170000000100
+    61AF122550A2807D005
+    61AF123C8010D00060E
+    61AF1249C007B05C9FF
+- expected_values:
+    MINI_HVBAT_CHG_CON: 0
+    MINI_HVBAT_CHG_CON_EXT: 0
+    MINI_HVBAT_CHG_RDY: 1
+    MINI_HVBAT_HVPM_MIN_SOC: 11.5
+    MINI_HVBAT_HVPM_SOC: 73.9
+  response: |-
+    61AF1101C62DE0002E3
+    61AF121170000010100
+    61AF122560A2D07D005
+    61AF123D2011F000C0E
+    61AF12489012305D2FF
+- expected_values:
+    MINI_HVBAT_CHG_CON: 0
+    MINI_HVBAT_CHG_CON_EXT: 0
+    MINI_HVBAT_CHG_RDY: 1
+    MINI_HVBAT_HVPM_MIN_SOC: 11.5
+    MINI_HVBAT_HVPM_SOC: 74.1
+  response: |-
+    61AF1101C62DE0002E5
+    61AF121170000010100
+    61AF122550A2B07D005
+    61AF123D20120000D0E
+    61AF124A6012C05D1FF
+- expected_values:
+    MINI_HVBAT_CHG_CON: 0
+    MINI_HVBAT_CHG_CON_EXT: 0
+    MINI_HVBAT_CHG_RDY: 1
+    MINI_HVBAT_HVPM_MIN_SOC: 11.5
+    MINI_HVBAT_HVPM_SOC: 76.3
+  response: |-
+    61AF1101C62DE0002FB
+    61AF121170000010100
+    61AF122530A2907D005
+    61AF123D2011B000A0E
+    61AF124EF00FE05D2FF
+- expected_values:
+    MINI_HVBAT_CHG_CON: 0
+    MINI_HVBAT_CHG_CON_EXT: 0
+    MINI_HVBAT_CHG_RDY: 1
+    MINI_HVBAT_HVPM_MIN_SOC: 11.5
+    MINI_HVBAT_HVPM_SOC: 76.5
+  response: |-
+    61AF1101C62DE0002FD
+    61AF121170000010100
+    61AF122530A2807D005
+    61AF123D2011700090E
+    61AF124F400D905D4FF
+- expected_values:
+    MINI_HVBAT_CHG_CON: 0
+    MINI_HVBAT_CHG_CON_EXT: 0
+    MINI_HVBAT_CHG_RDY: 1
+    MINI_HVBAT_HVPM_MIN_SOC: 11.5
+    MINI_HVBAT_HVPM_SOC: 76.6
+  response: |-
+    61AF1101C62DE0002FE
+    61AF121170000010100
+    61AF122530A2807D005
+    61AF123D2011A000A0E
+    61AF124F400F605D4FF
+- expected_values:
+    MINI_HVBAT_CHG_CON: 0
+    MINI_HVBAT_CHG_CON_EXT: 0
     MINI_HVBAT_CHG_RDY: 1
     MINI_HVBAT_HVPM_MIN_SOC: 11.5
     MINI_HVBAT_HVPM_SOC: 80.8
