--- a/tests/test_cases/2023/commands/6F1.660.22D111|e=60,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.660.22D111|e=60,fc=1.yaml
@@ -11,6 +11,46 @@ test_cases:
     660F121062C0334FFFF
     660F122421E0046FFFF
 - expected_values:
+    MINI_AUX_PWR: 0.22
+    MINI_RANGE_E_CUR: 118
+    MINI_RANGE_E_MAX: 177
+    MINI_RANGE_E_USE: 15.748
+    MINI_RANGE_F_CUR: 118
+  response: |-
+    660F1100F62D111049C
+    660F12106EA049CFFFF
+    660F1223D840016FFFF
+- expected_values:
+    MINI_AUX_PWR: 0.49
+    MINI_RANGE_E_CUR: 123
+    MINI_RANGE_E_MAX: 164
+    MINI_RANGE_E_USE: 16.279
+    MINI_RANGE_F_CUR: 123
+  response: |-
+    660F1100F62D11104CE
+    660F121066804CEFFFF
+    660F1223F970031FFFF
+- expected_values:
+    MINI_AUX_PWR: 0.55
+    MINI_RANGE_E_CUR: 124
+    MINI_RANGE_E_MAX: 163
+    MINI_RANGE_E_USE: 16.279
+    MINI_RANGE_F_CUR: 124
+  response: |-
+    660F1100F62D11104D8
+    660F121065E04D8FFFF
+    660F1223F970037FFFF
+- expected_values:
+    MINI_AUX_PWR: 0.47
+    MINI_RANGE_E_CUR: 125
+    MINI_RANGE_E_MAX: 165
+    MINI_RANGE_E_USE: 16.279
+    MINI_RANGE_F_CUR: 125
+  response: |-
+    660F1100F62D11104E2
+    660F121067204E2FFFF
+    660F1223F97002FFFFF
+- expected_values:
     MINI_AUX_PWR: 0.79
     MINI_RANGE_E_CUR: 127
     MINI_RANGE_E_MAX: 156
