--- a/tests/test_cases/2023/commands/6F1.629.22DBE4|e=29,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.629.22DBE4|e=29,fc=1.yaml
@@ -30,3 +30,33 @@ test_cases:
     629F121000000000000
     629F122000003030303
     629F1230064646464FF
+- expected_values:
+    MINI_FL_SPD: 14.1
+    MINI_FR_SPD: 14.29
+    MINI_RL_SPD: 13.88
+    MINI_RR_SPD: 14.13
+  response: |-
+    629F1101662DBE40582
+    629F1210595056C0585
+    629F122057801010101
+    629F1230164646464FF
+- expected_values:
+    MINI_FL_SPD: 14.79
+    MINI_FR_SPD: 14.72
+    MINI_RL_SPD: 14.86
+    MINI_RR_SPD: 14.76
+  response: |-
+    629F1101662DBE405C7
+    629F12105C005CE05C4
+    629F122057801010101
+    629F1230164646464FF
+- expected_values:
+    MINI_FL_SPD: 23.2
+    MINI_FR_SPD: 23.86
+    MINI_RL_SPD: 22.97
+    MINI_RR_SPD: 23.58
+  response: |-
+    629F1101662DBE40910
+    629F121095208F90936
+    629F12208FC01010101
+    629F1230164646464FF
