--- a/tests/test_cases/2023/commands/6F1.660.22D10D|e=60,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.660.22D10D|e=60,fc=1.yaml
@@ -18,3 +18,21 @@ test_cases:
   response: |-
     660F1100B62D10D0000
     660F1217EAB00007EAB
+- expected_values:
+    MINI_ODO1: 35090
+    MINI_ODO2: 35090
+  response: |-
+    660F1100B62D10D0000
+    660F121891200008912
+- expected_values:
+    MINI_ODO1: 35096
+    MINI_ODO2: 35096
+  response: |-
+    660F1100B62D10D0000
+    660F121891800008918
+- expected_values:
+    MINI_ODO1: 35106
+    MINI_ODO2: 35106
+  response: |-
+    660F1100B62D10D0000
+    660F121892200008922
