Update command data for MINI/Cooper

--- a/tests/test_cases/2023/commands/6F1.629.22DBE4|e=29,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.629.22DBE4|e=29,fc=1.yaml
@@ -31,14 +31,14 @@ test_cases:
     629F122000003030303
     629F1230064646464FF
 - expected_values:
-    MINI_FL_SPD: 14.1
-    MINI_FR_SPD: 14.29
-    MINI_RL_SPD: 13.88
-    MINI_RR_SPD: 14.13
+    MINI_FL_SPD: 4.19
+    MINI_FR_SPD: 3.75
+    MINI_RL_SPD: 4.26
+    MINI_RR_SPD: 3.19
   response: |-
-    629F1101662DBE40582
-    629F1210595056C0585
-    629F122057801010101
+    629F1101662DBE401A3
+    629F121017701AA013F
+    629F122019001010101
     629F1230164646464FF
 - expected_values:
     MINI_FL_SPD: 14.79
@@ -51,6 +51,16 @@ test_cases:
     629F122057801010101
     629F1230164646464FF
 - expected_values:
+    MINI_FL_SPD: 17.82
+    MINI_FR_SPD: 17.7
+    MINI_RL_SPD: 17.68
+    MINI_RR_SPD: 17.7
+  response: |-
+    629F1101662DBE406F6
+    629F12106EA06E806EA
+    629F12206A401010101
+    629F1230164646464FF
+- expected_values:
     MINI_FL_SPD: 23.2
     MINI_FR_SPD: 23.86
     MINI_RL_SPD: 22.97
@@ -59,4 +69,24 @@ test_cases:
     629F1101662DBE40910
     629F121095208F90936
     629F12208FC01010101
+    629F1230164646464FF
+- expected_values:
+    MINI_FL_SPD: 25.02
+    MINI_FR_SPD: 24.93
+    MINI_RL_SPD: 24.9
+    MINI_RR_SPD: 25.16
+  response: |-
+    629F1101662DBE409C6
+    629F12109BD09BA09D4
+    629F12209C401010101
+    629F1230164646464FF
+- expected_values:
+    MINI_FL_SPD: 29.78
+    MINI_FR_SPD: 29.92
+    MINI_RL_SPD: 29.69
+    MINI_RR_SPD: 29.89
+  response: |-
+    629F1101662DBE40BA2
+    629F1210BB00B990BAD
+    629F1220B5401010101
     629F1230164646464FF
