--- a/tests/test_cases/2023/commands/6F1.640.221700|e=40,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.640.221700|e=40,fc=1.yaml
@@ -15,3 +15,8 @@ test_cases:
   response: |-
     640F110076217000000
     640F1218922FFFFFFFF
+- expected_values:
+    MINI_ODO_2: 35117
+  response: |-
+    640F110076217000000
+    640F121892DFFFFFFFF
