--- a/tests/test_cases/2023/commands/6F1.660.22D10D|e=60,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.660.22D10D|e=60,fc=1.yaml
@@ -36,3 +36,9 @@ test_cases:
   response: |-
     660F1100B62D10D0000
     660F121892200008922
+- expected_values:
+    MINI_ODO1: 35117
+    MINI_ODO2: 35117
+  response: |-
+    660F1100B62D10D0000
+    660F121892D0000892D
