--- a/tests/test_cases/2023/commands/6F1.660.22D10D|e=60,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.660.22D10D|e=60,fc=1.yaml
@@ -42,3 +42,9 @@ test_cases:
   response: |-
     660F1100B62D10D0000
     660F121892D0000892D
+- expected_values:
+    MINI_ODO1: 35125
+    MINI_ODO2: 35125
+  response: |-
+    660F1100B62D10D0000
+    660F121893500008935
