--- a/tests/test_cases/2023/commands/6F1.61A.22DE00|e=1A,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.61A.22DE00|e=1A,fc=1.yaml
@@ -3,6 +3,18 @@ test_cases:
 - expected_values:
     MINI_HVBAT_CHG_CON: 0
     MINI_HVBAT_CHG_CON_EXT: 0
+    MINI_HVBAT_CHG_RDY: 0
+    MINI_HVBAT_HVPM_MIN_SOC: 11.5
+    MINI_HVBAT_HVPM_SOC: 56.1
+  response: |-
+    61AF1101C62DE000231
+    61AF121170000000100
+    61AF122120A2E07D005
+    61AF123A0013300060E
+    61AF124360071059EFF
+- expected_values:
+    MINI_HVBAT_CHG_CON: 0
+    MINI_HVBAT_CHG_CON_EXT: 0
     MINI_HVBAT_CHG_RDY: 1
     MINI_HVBAT_HVPM_MIN_SOC: 11.5
     MINI_HVBAT_HVPM_SOC: 56.3
