--- a/tests/test_cases/2023/commands/6F1.607.22DDBC|e=07,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.607.22DDBC|e=07,fc=1.yaml
@@ -1,6 +1,13 @@
 command_id: 6F1.607.22DDBC|e=07,fc=1
 test_cases:
 - expected_values:
+    MINI_HVBAT_SOC: 53
+    MINI_HVBAT_SOC_MAX: 95.5
+    MINI_HVBAT_SOC_MIN: 11.5
+  response: |-
+    607F1100962DDBC0212
+    607F12103BB0073FFFF
+- expected_values:
     MINI_HVBAT_SOC: 55.4
     MINI_HVBAT_SOC_MAX: 96.8
     MINI_HVBAT_SOC_MIN: 11.5
