--- a/tests/test_cases/2023/commands/6F1.640.221700|e=40,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.640.221700|e=40,fc=1.yaml
@@ -6,6 +6,16 @@ test_cases:
     640F110076217000000
     640F12161BFFFFFFFFF
 - expected_values:
+    MINI_ODO_2: 25032
+  response: |-
+    640F110076217000000
+    640F12161C8FFFFFFFF
+- expected_values:
+    MINI_ODO_2: 25044
+  response: |-
+    640F110076217000000
+    640F12161D4FFFFFFFF
+- expected_values:
     MINI_ODO_2: 35081
   response: |-
     640F110076217000000
