Update command data for MINI/Cooper

--- a/tests/test_cases/2023/commands/6F1.607.226335|e=07,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.607.226335|e=07,fc=1.yaml
@@ -6,6 +6,11 @@ test_cases:
     607F110076263350000
     607F1210060FFFFFFFF
 - expected_values:
+    MINI_HVBAT_SOH: 97
+  response: |-
+    607F110076263350000
+    607F1210061FFFFFFFF
+- expected_values:
     MINI_HVBAT_SOH: 98
   response: |-
     607F110076263350000
