--- a/tests/test_cases/2023/commands/6F1.660.22D111|e=60,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.660.22D111|e=60,fc=1.yaml
@@ -41,6 +41,16 @@ test_cases:
     660F12106AE03F2FFFF
     660F1223C9F002FFFFF
 - expected_values:
+    MINI_AUX_PWR: 0.42
+    MINI_RANGE_E_CUR: 107
+    MINI_RANGE_E_MAX: 160
+    MINI_RANGE_E_USE: 17.002
+    MINI_RANGE_F_CUR: 107
+  response: |-
+    660F1100F62D111042E
+    660F1210640042EFFFF
+    660F122426A002AFFFF
+- expected_values:
     MINI_AUX_PWR: 0.2
     MINI_RANGE_E_CUR: 122
     MINI_RANGE_E_MAX: 197
