--- a/tests/test_cases/2023/commands/6F1.607.22DDBC|e=07,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.607.22DDBC|e=07,fc=1.yaml
@@ -15,6 +15,13 @@ test_cases:
     607F1100962DDBC0280
     607F12103BB0073FFFF
 - expected_values:
+    MINI_HVBAT_SOC: 69.6
+    MINI_HVBAT_SOC_MAX: 95.6
+    MINI_HVBAT_SOC_MIN: 11.5
+  response: |-
+    607F1100962DDBC02B8
+    607F12103BC0073FFFF
+- expected_values:
     MINI_HVBAT_SOC: 74.4
     MINI_HVBAT_SOC_MAX: 97
     MINI_HVBAT_SOC_MIN: 11.5
