Update command data for MINI/Cooper

--- a/tests/test_cases/2023/commands/6F1.61A.22DE00|e=1A,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.61A.22DE00|e=1A,fc=1.yaml
@@ -75,6 +75,18 @@ test_cases:
 - expected_values:
     MINI_HVBAT_CHG_CON: 0
     MINI_HVBAT_CHG_CON_EXT: 0
+    MINI_HVBAT_CHG_RDY: 0
+    MINI_HVBAT_HVPM_MIN_SOC: 11.5
+    MINI_HVBAT_HVPM_SOC: 64
+  response: |-
+    61AF1101C62DE000280
+    61AF121170000000100
+    61AF122130A2F07D005
+    61AF123A0014000070E
+    61AF1249C009505A2FF
+- expected_values:
+    MINI_HVBAT_CHG_CON: 0
+    MINI_HVBAT_CHG_CON_EXT: 0
     MINI_HVBAT_CHG_RDY: 1
     MINI_HVBAT_HVPM_MIN_SOC: 11.5
     MINI_HVBAT_HVPM_SOC: 69.1
