--- a/tests/test_cases/2023/commands/6F1.660.22D111|e=60,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.660.22D111|e=60,fc=1.yaml
@@ -90,3 +90,13 @@ test_cases:
     660F1100F62D1110582
     660F12106900582FFFF
     660F1223DE10049FFFF
+- expected_values:
+    MINI_AUX_PWR: 0.23
+    MINI_RANGE_E_CUR: 149
+    MINI_RANGE_E_MAX: 173
+    MINI_RANGE_E_USE: 15.937
+    MINI_RANGE_F_CUR: 149
+  response: |-
+    660F1100F62D11105D2
+    660F12106C205D2FFFF
+    660F1223E410017FFFF
