Update command data for MINI/Cooper

--- a/tests/test_cases/2023/commands/6F1.660.22D111|e=60,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.660.22D111|e=60,fc=1.yaml
@@ -91,6 +91,16 @@ test_cases:
     660F12106900582FFFF
     660F1223DE10049FFFF
 - expected_values:
+    MINI_AUX_PWR: 0.37
+    MINI_RANGE_E_CUR: 144
+    MINI_RANGE_E_MAX: 169
+    MINI_RANGE_E_USE: 16.056
+    MINI_RANGE_F_CUR: 144
+  response: |-
+    660F1100F62D11105A0
+    660F121069A05A0FFFF
+    660F1223EB80025FFFF
+- expected_values:
     MINI_AUX_PWR: 0.21
     MINI_RANGE_E_CUR: 149
     MINI_RANGE_E_MAX: 173
