--- a/tests/test_cases/2023/commands/6F1.607.22DFA0|e=07,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.607.22DFA0|e=07,fc=1.yaml
@@ -1,6 +1,34 @@
 command_id: 6F1.607.22DFA0|e=07,fc=1
 test_cases:
 - expected_values:
+    MINI_HVBAT_C_CAP_AVG: 95.01
+    MINI_HVBAT_C_CAP_MAX: 98.07
+    MINI_HVBAT_C_CAP_MIN: 92.69
+    MINI_HVBAT_C_OCV_AVG: 4.0648
+    MINI_HVBAT_C_OCV_MAX: 4.071
+    MINI_HVBAT_C_OCV_MIN: 4.058
+    MINI_HVBAT_C_RES_FACTOR_AVG: 0.9632
+    MINI_HVBAT_C_RES_FACTOR_MAX: 6.5535
+    MINI_HVBAT_C_RES_FACTOR_MIN: 6.5535
+    MINI_HVBAT_C_SOC_AVG: 84.78
+    MINI_HVBAT_C_SOC_MAX: 88.32
+    MINI_HVBAT_C_SOC_MIN: 81.86
+    MINI_HVBAT_C_TEMP_AVG: 15.99
+    MINI_HVBAT_C_TEMP_MAX: 16.78
+    MINI_HVBAT_C_TEMP_MIN: 15.2
+    MINI_HVBAT_C_V_AVG: 4.0003
+    MINI_HVBAT_C_V_MAX: 4.0108
+    MINI_HVBAT_C_V_MIN: 3.9925
+    MINI_HVBAT_IMPEDANCE_ALPHA: 0.9632
+  response: |-
+    607F1102962DFA02435
+    607F121264F251D9BF5
+    607F1229CAC9C4305F0
+    607F123068E063FFFFF
+    607F124FFFF25A01FFA
+    607F1252280211E9E84
+    607F1269F069EC825A0
+- expected_values:
     MINI_HVBAT_C_CAP_AVG: 95.21
     MINI_HVBAT_C_CAP_MAX: 98.22
     MINI_HVBAT_C_CAP_MIN: 92.75
