Update command data for MINI/Cooper

--- a/tests/test_cases/2023/commands/6F1.607.22DFA0|e=07,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.607.22DFA0|e=07,fc=1.yaml
@@ -4,6 +4,34 @@ test_cases:
     MINI_HVBAT_C_CAP_AVG: 95.01
     MINI_HVBAT_C_CAP_MAX: 98.07
     MINI_HVBAT_C_CAP_MIN: 92.69
+    MINI_HVBAT_C_OCV_AVG: 3.982
+    MINI_HVBAT_C_OCV_MAX: 3.99
+    MINI_HVBAT_C_OCV_MIN: 3.975
+    MINI_HVBAT_C_RES_FACTOR_AVG: 1.0137
+    MINI_HVBAT_C_RES_FACTOR_MAX: 6.5535
+    MINI_HVBAT_C_RES_FACTOR_MIN: 6.5535
+    MINI_HVBAT_C_SOC_AVG: 77.93
+    MINI_HVBAT_C_SOC_MAX: 81.21
+    MINI_HVBAT_C_SOC_MIN: 75.32
+    MINI_HVBAT_C_TEMP_AVG: 19.16
+    MINI_HVBAT_C_TEMP_MAX: 19.99
+    MINI_HVBAT_C_TEMP_MIN: 19
+    MINI_HVBAT_C_V_AVG: 3.9811
+    MINI_HVBAT_C_V_MAX: 3.9888
+    MINI_HVBAT_C_V_MIN: 3.9732
+    MINI_HVBAT_IMPEDANCE_ALPHA: 1.0137
+  response: |-
+    607F1102962DFA02435
+    607F121264F251D9B34
+    607F1229BD09B83076C
+    607F12307CF077CFFFF
+    607F124FFFF27991D6C
+    607F1251FB91E719B46
+    607F1269BDC9B8C2799
+- expected_values:
+    MINI_HVBAT_C_CAP_AVG: 95.01
+    MINI_HVBAT_C_CAP_MAX: 98.07
+    MINI_HVBAT_C_CAP_MIN: 92.69
     MINI_HVBAT_C_OCV_AVG: 4.0648
     MINI_HVBAT_C_OCV_MAX: 4.071
     MINI_HVBAT_C_OCV_MIN: 4.058
