--- a/tests/test_cases/2023/commands/6F1.660.22D112|e=60,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.660.22D112|e=60,fc=1.yaml
@@ -4,5 +4,8 @@ test_cases:
     MINI_AAT: -7.5
   response: 660F10562D1124147
 - expected_values:
+    MINI_AAT: 16
+  response: 660F10562D1127077
+- expected_values:
     MINI_AAT: 16.5
   response: 660F10562D1127171
