--- a/tests/test_cases/2023/commands/6F1.607.22DDBC|e=07,fc=1.yaml
+++ b/tests/test_cases/2023/commands/6F1.607.22DDBC|e=07,fc=1.yaml
@@ -29,6 +29,13 @@ test_cases:
     607F1100962DDBC02E8
     607F12103CA0073FFFF
 - expected_values:
+    MINI_HVBAT_SOC: 77.5
+    MINI_HVBAT_SOC_MAX: 95.5
+    MINI_HVBAT_SOC_MIN: 11.5
+  response: |-
+    607F1100962DDBC0307
+    607F12103BB0073FFFF
+- expected_values:
     MINI_HVBAT_SOC: 78.2
     MINI_HVBAT_SOC_MAX: 96.7
     MINI_HVBAT_SOC_MIN: 11.5
